--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.0.7",
+    "vue-lazyload": "^1.2.3",
     "vue-router": "^3.0.1",
     "vue-wechat-auth": "^1.0.2",
     "vuex": "^3.0.1",
