--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Market",
   "version": "1.0.0",
   "description": "webpack + vue2 + ydui",
-  "author": "BlackAnWhite <284549569@qq.com>",
+  "author": "BlackAnWhite <1610918900@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -20,6 +20,7 @@
     "vue-router": "^3.0.1",
     "vue-wechat-auth": "^1.0.2",
     "vuex": "^3.0.1",
+    "weixin-js-sdk": "^1.3.2",
     "ydui-district": "^1.1.0"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
+    "chromedriver": "^2.40.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
@@ -76,8 +77,8 @@
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "node": ">= 10.5.0",
+    "npm": ">= 6.1.0"
   },
   "browserslist": [
     "> 1%",
